# fang

./: Cargo.toml  readme.md
.github/: FUNDING.yml
.github/workflows/: rust.yml
docs/: index.html
src/: main.rs
src/misc/: mod.rs
src/repl/: commands.rs  mod.rs  parser.rs  shell.rs  style.rs
src/tools/: encode.rs  mod.rs
src/tools/http/: delete.rs  get.rs  mod.rs  post.rs  put.rs  spider.rs
src/tools/offensive/: dos.rs  mod.rs
src/tools/recon/: dns.rs
src/tools/tcp/: mod.rs  ping.rs  portscan.rs  reverse_tcp.rs
src/ui/: mod.rs  terms.rs
